<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".Activity.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:elevation="0dp"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark">

            <com.sdsmdg.harjot.crollerTest.Croller
                android:id="@+id/croller"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerInParent="true"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:back_circle_color="@color/colorPrimary"
                app:indicator_color="@color/colorAccent"
                app:indicator_width="10"
                app:is_continuous="false"
                app:label_color="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:main_circle_color="@color/colorPrimaryDark"
                app:max="100"
                app:progress="59"
                app:progress_primary_color="@color/colorAccent"
                app:progress_secondary_color="@color/colorPrimary"
                app:start_offset="45" />

            <android.support.v7.widget.CardView
                android:id="@+id/cardJunk"
                android:layout_width="0dp"
                android:layout_height="130dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/colorPrimary"
                app:layout_constraintEnd_toStartOf="@+id/cardBoost"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/croller"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="2dp"
                card_view:cardUseCompatPadding="true">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:contentDescription="@string/image_trash"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        card_view:srcCompat="@drawable/ic_delete" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/junk"
                        android:textColor="@color/colorWhite"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/textView3"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:text="@string/over_mb"
                        android:textColor="@color/colorWhite"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardBoost"
                android:layout_width="0dp"
                android:layout_height="130dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="24dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/colorPrimary"
                app:layout_constraintEnd_toStartOf="@+id/cardBattery"
                app:layout_constraintStart_toEndOf="@+id/cardJunk"
                app:layout_constraintTop_toBottomOf="@+id/croller"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="2dp"
                card_view:cardUseCompatPadding="true">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:contentDescription="@string/image_rocket"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        card_view:srcCompat="@drawable/ic_rocket" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/boost"
                        android:textColor="@color/colorWhite"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/textView5"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:text="@string/app_over"
                        android:textColor="@color/colorWhite"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardBattery"
                android:layout_width="0dp"
                android:layout_height="130dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="24dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cardBoost"
                app:layout_constraintTop_toBottomOf="@+id/croller"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="2dp"
                card_view:cardUseCompatPadding="true">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:contentDescription="@string/image_battery"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        card_view:srcCompat="@drawable/ic_battery" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/battery"
                        android:textColor="@color/colorWhite"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/textView7"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:text="@string/percent_over"
                        android:textColor="@color/colorWhite"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardAdTrash"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardBoost"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="2dp"
                card_view:cardUseCompatPadding="true">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@string/image_ad_trash"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        card_view:srcCompat="@drawable/ic_delete" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/speed_up_phone"
                        android:textColor="@color/colorWhite"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageView5"
                        app:layout_constraintTop_toTopOf="parent" />

                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardDeepClean"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardAdTrash"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="2dp"
                card_view:cardUseCompatPadding="true">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@string/image_deep_clean"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        card_view:srcCompat="@drawable/ic_paint_brush" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/delete_unnecessary_files"
                        android:textColor="@color/colorWhite"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageView6"
                        app:layout_constraintTop_toTopOf="parent" />
                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_refresh_black_24dp" />

</android.support.design.widget.CoordinatorLayout>